# ewindow-core

./: ContactList.qml  Makefile  TimeoutDialog.qml  baresipcore.cpp  baresipcore.h  baresipvidisp.cpp  baresipvidisp.h  contactlistmodel.cpp  contactlistmodel.h  coolsocket.cpp  coolsocket.h  ewindow.files  ewindow.includes  ewindow.pro  main.cpp  main.qml  meson.build  peerdiscoverer.cpp  peerdiscoverer.h  peerfinder.cpp  peerfinder.h  peerlist.cpp  peerlist.h  qtquicktest.pro  simplepeerconnection.cpp  simplepeerconnection.h  useragent.cpp  useragent.h  volumemanager.cpp  volumemanager.h  yuvtexturematerial.cpp  yuvtexturematerial.h
debian/: changelog  control  copyright  dirs
gui/: ContactList.qml  contactlistbench.qml  logic.js  main.qml
subprojects/: QtZeroConf.wrap  libsrtp.wrap  libyuv.wrap  qwebrtc.wrap  webrtc.wrap
